--- a/src/app/exercice2/exercice2.component.html
+++ b/src/app/exercice2/exercice2.component.html
@@ -1,7 +1,9 @@
 <h3>Exercice 2 : mise en place d'un décorateur Viewchild </h3>
 <br />
-<input type="text" >
+
+<input type="text" [ngModel]="txtValue" (ngModelChange)='updateValue($event)'  > 
+<app-exercice2-enfant></app-exercice2-enfant>
 <br />
 <br />
-<span> valeur de l'input : {{ valeur }}</span>
+<span> valeur de l'input : {{ txtValue }}</span>
 <hr>
